--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-
 <!DOCTYPE html>
 <html>
+<head>
+    <title>My Linktree</title>
+    <style>
+        /* Add your custom CSS styles here */
+    </style>
+</head>
 <body>
-<h1>Hello Anthony! Venom looks bad!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="link-container">
+        <a href="https://www.instagram.com/your-instagram-profile">Instagram</a>
+        <a href="https://twitter.com/your-twitter-profile">Twitter</a>
+        <a href="https://www.example.com">Website</a>
+        <!-- Add more links as needed -->
+    </div>
 </body>
 </html>
