--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
     <div class="link-container">
-        <a class="link" href="https://www.instagram.com/your-instagram-profile">Instagram</a>
-        <a class="link" href="https://twitter.com/your-twitter-profile">Twitter</a>
+        <a class="link" href="https://www.instagram.com/giantbombdotcom">Instagram</a>
+        <a class="link" href="https://twitter.com/giantbomb">Twitter</a>
         <a class="link" href="https://www.example.com">Website</a>
         <!-- Add more links as needed -->
     </div>
@@ -42,7 +42,7 @@
         (function() {
             var container = document.getElementById('tiktok-container');
             var embed = new TikTok.Embed(container, {
-                urls: ['https://www.tiktok.com/@your-tiktok-profile']
+                urls: ['https://www.tiktok.com/@therealgiantbomb']
             });
             embed.load();
         })();
