--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Linktree</title>
+    <title>Where to find Giant Bomb</title>
     <style>
         /* Set the background color and font style */
         body {
@@ -51,6 +51,11 @@
     </style>
 </head>
 <body>
+ <!-- Insert your small photo here -->
+    <img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487678-gb_logo-bomb-knockout.png" alt="Small Photo" style="display: block; margin: 0 auto; max-width: 200px;">
+
+
+
     <div class="link-container">
         <h1 class="headline">Giant Bomb</h1>
 	<a class="link" href="https://www.twitch.tv/giantbomb">Twitch</a>
