--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
     <div class="link-container">
         <h1 class="headline">Giant Bomb</h1>
-        <a href="https://www.twitch.tv/giantbomb"><img src="path_to_twitch_image.png" alt="Twitch"></a>
-        <a href="https://www.youtube.com/giantbomb"><img src="path_to_youtube_image.png" alt="YouTube"></a>
+        <a href="https://www.twitch.tv/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487683-twitch.png" alt="Twitch"></a>
+        <a href="https://www.youtube.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487685-youtube.png" alt="YouTube"></a>
         <a href="https://www.giantbomb.com"><img src="path_to_main_site_image.png" alt="Main Site"></a>
-        <a href="https://www.instagram.com/giantbombdotcom"><img src="path_to_instagram_image.png" alt="Instagram"></a>
-        <a href="https://twitter.com/giantbomb"><img src="path_to_twitter_image.png" alt="Twitter"></a>
+        <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram"></a>
+        <a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter"></a>
         <!-- Add more links as needed -->
     </div>
 
