--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <a href="https://www.giantbomb.com"><img src="path_to_main_site_image.png" alt="Main Site"></a>
         <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram"></a>
         <a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter"></a>
+ 	<a href="https://www.tiktok.com/@therealgiantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487682-tiktok.png" alt="Twitter"></a>
         <!-- Add more links as needed -->
     </div>
 
