--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             margin: 0 auto;
             max-width: 200px;
         }
+
+        /* Resize the social media icons */
+        .social-media-icon {
+            max-width: 100px;
+            max-height: 100px;
+        }
     </style>
 </head>
 <body>
@@ -49,12 +55,11 @@
 
     <div class="link-container">
         <h1 class="headline">Giant Bomb</h1>
-        <a href="https://www.twitch.tv/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487683-twitch.png" alt="Twitch"></a>
-        <a href="https://www.youtube.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487685-youtube.png" alt="YouTube"></a>
-        <a href="https://www.giantbomb.com"><img src="path_to_main_site_image.png" alt="Main Site"></a>
-        <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram"></a>
-        <a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter"></a>
- 	<a href="https://www.tiktok.com/@therealgiantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487682-tiktok.png" alt="Twitter"></a>
+        <a href="https://www.twitch.tv/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487683-twitch.png" alt="Twitch" class="social-media-icon"></a>
+        <a href="https://www.youtube.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487685-youtube.png" alt="YouTube" class="social-media-icon"></a>
+        <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram" class="social-media-icon"></a>
+        <a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter" class="social-media-icon"></a>
+        <a href="https://www.tiktok.com/@therealgiantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487682-tiktok.png" alt="TikTok" class="social-media-icon"></a>
         <!-- Add more links as needed -->
     </div>
 
