--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .logo-image {
             display: block;
             margin: 0 auto;
-            max-width: 200px;
+            max-width: 300px;
         }
 
         /* Resize the social media icons */
@@ -60,6 +60,7 @@
         <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram" class="social-media-icon"></a>
         <a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter" class="social-media-icon"></a>
         <a href="https://www.tiktok.com/@therealgiantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487682-tiktok.png" alt="TikTok" class="social-media-icon"></a>
+	 <a href="https://www.discord.gg/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487680-discord.png" alt="TikTok" class="social-media-icon"></a>
         <!-- Add more links as needed -->
     </div>
 
