--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background-repeat: repeat;
             background-size: 200px;
             background-position: center;
-            background-image opacity: 0.15;
+            background-image-opacity: 0.15;
         }
 
         /* Customize the container and link styles */
