--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
     <img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487678-gb_logo-bomb-knockout.png" alt="Logo" class="logo-image">
 
     <div class="link-container">
-        <h1 class="headline"><a href="https://www.giantbomb.com">Giant Bomb</a></h1>
+        <h1 class="headline">Giant Bomb</h1>
+
+<a href="https://store.giantbomb.com/">
+  <button>Visit the Store!</button>
+</a>
+
+<a href="https://giantbomb.com/">
+  <button>Visit the Site!</button>
+</a>
+
+
         <a href="https://www.twitch.tv/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487683-twitch.png" alt="Twitch" class="social-media-icon"></a>
         <a href="https://www.youtube.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487685-youtube.png" alt="YouTube" class="social-media-icon"></a>
         <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram" class="social-media-icon"></a>
