--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Where to find Giant Bomb</title>
+<link rel="icon" href="https://www.giantbomb.com/a/uploads/original/28/288354/3487678-gb_logo-bomb-knockout.png" type="image/x-icon">
     <style>
         /* Set the background color and font style */
         body {
