--- a/index.html
+++ b/index.html
@@ -61,17 +61,14 @@
     <div class="link-container">
         <h1 class="headline">Giant Bomb</h1>
 
-<a href="https://store.giantbomb.com/">
-  <button>Visit the Store!</button>
-</a>
-<br>
-<br>
-<a href="https://giantbomb.com/">
-  <button>Visit the Site!</button>
-</a>
 
+<a href="https://store.giantbomb.com"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487699-merch.png" alt="Merch" class="social-media-icon"></a>
 
-        <a href="https://www.twitch.tv/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487683-twitch.png" alt="Twitch" class="social-media-icon"></a>
+<a href="https://www.giantbomb.com"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487700-visit-the-site.png" alt="Site" class="social-media-icon"></a>       
+
+<a href="https://open.spotify.com/show/5as3aKmN2k11yfDDDSrvaZ"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3380595-bombcast-logo-wide.png" alt="Bombcast" class="social-media-icon"></a>
+
+ <a href="https://www.twitch.tv/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487683-twitch.png" alt="Twitch" class="social-media-icon"></a>
         <a href="https://www.youtube.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487685-youtube.png" alt="YouTube" class="social-media-icon"></a>
         <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram" class="social-media-icon"></a>
         <a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter" class="social-media-icon"></a>
