--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487678-gb_logo-bomb-knockout.png" alt="Logo" class="logo-image">
 
     <div class="link-container">
-        <h1 class="headline">Giant Bomb</h1>
+        <h1 class="headline">Giant Bomb, where've you bean?</h1>
 
 
 <a href="https://store.giantbomb.com"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487699-merch.png" alt="Merch" class="social-media-icon"></a>
@@ -70,10 +70,13 @@
 
  <a href="https://www.twitch.tv/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487683-twitch.png" alt="Twitch" class="social-media-icon"></a>
         <a href="https://www.youtube.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487685-youtube.png" alt="YouTube" class="social-media-icon"></a>
-        <a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram" class="social-media-icon"></a>
-        <a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter" class="social-media-icon"></a>
-        <a href="https://www.tiktok.com/@therealgiantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487682-tiktok.png" alt="TikTok" class="social-media-icon"></a>
+ 	<a href="https://www.tiktok.com/@therealgiantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487682-tiktok.png" alt="TikTok" class="social-media-icon"></a>
         <a href="https://www.discord.gg/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487680-discord.png" alt="Discord" class="social-media-icon"></a>
+	<a href="https://twitter.com/giantbomb"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487684-twitter.png" alt="Twitter" class="social-media-icon"></a>        
+	<a href="https://www.instagram.com/giantbombdotcom"><img src="https://www.giantbomb.com/a/uploads/original/28/288354/3487681-instagram.png" alt="Instagram" class="social-media-icon"></a>
+        
+       
+
         <!-- Add more links as needed -->
     </div>
 
